update s3 and dynamo db to sdk v2